refactor(shared-cache): replace volatile maps with atomic immutable snapshots